[project]
name = "byteforge-crypto-commons"
version = "0.6"
description = "Common models and dependencies for crypto projects."
readme = "README.md"
license = { text = "O'Saasy License" }
keywords = ["cryptocurrency", "API", "byteforge-coinmarketcap", "crytpo", "byteforge"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
authors = [
  { name = "Jason Byteforge" }
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.urls]
Homepage = "https://github.com/jmazzahacks/byteforge-crypto-commons"
Issues = "https://github.com/jmazzahacks/byteforge-crypto-commons/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_commons"]
